--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		<td>
 			<img src="images/Email-Sig03_06.png" width="182" height="47" alt=""></td>
 		<td>
-            <a href="https://www.yelp.com"><img src="images/Email-Sig03_07.png" width="92" height="47" alt=""></a></td>
+            <a href="https://www.zillow.com/profile/chelseaknowsredding/"><img src="images/Email-Sig03_07.png" width="92" height="47" alt=""></a></td>
 		<td colspan="2">
-            <a href="https://www.realtor.com"><img src="images/Email-Sig03_08.png" width="126" height="47" alt=""></a></td>
+            <a href="http://www.chelseavalach.com/home-evaluation"><img src="images/Email-Sig03_08.png" width="126" height="47" alt=""></a></td>
 		<td>
 			<img src="spacer.gif" width="1" height="47" alt=""></td>
 	</tr>
